--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,12 +5,14 @@
     "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
     "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
-  /*--foreground-rgb: 0, 0, 0;*/
-  /*--background-start-rgb: 214, 219, 220;*/
-  /*--background-end-rgb: 255, 255, 255;*/
   body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: #f7fafc;
+    min-height:100vh;
   }
+
 
   --primary-glow: conic-gradient(
     from 180deg at 50% 50%,
