style: 전체 레이아웃 및 글로벌 css 적용

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,7 @@
     flex-direction: column;
     align-items: center;
     background-color: #f7fafc;
-    min-height:100vh;
+    height: 100vh;
   }
 
 
